# govango-code

./: .gitignore  README.org  flake.nix
finite-elements-from-scratch-in-python/: 0.05inclusion.msh  015_split_source.msh  README.org  examine_instance.py  finite_elements.py  main.py  mesh.py  open_cascade.geo  parameters.toml  profile_results.prof  pyproject.toml  reference_element_operators.py  run_experiment.py  run_simulation.py  simulation-parameters.toml  skull.msh  symmetric_values.npy  testing.py  untitled.geo  visualizing.py
finite-elements-from-scratch-in-python/docs/symbolic-calculations/: upwind-flux.py
finite-elements-from-scratch-in-python/fem_from_scratch/: finite_elements.py  mesh.py  reference_element_operators.py
finite-elements-from-scratch-in-python/fem_from_scratch/meshes/: 2d-ellipse.geo  2d-ellipse.msh  mesh.py  solid-torus.geo  wavy3d.msh
finite-elements-from-scratch-in-python/fem_from_scratch/plotting/: adjacent-cells.gltf  plot-adjacent-cells.py  plot-nodal-set-on-mesh.py  reference-tetrahedron.py
finite-elements-from-scratch-in-python/fem_from_scratch/tabulated_nodes/: line_nodes.npz  tetrahedron_nodes.npz  triangle_nodes.npz
finite-elements-from-scratch-in-python/inputs/meshes/: 0.1.msh  0.15.msh  01.msh  10.msh  cube.msh  default.msh  fine_grid.msh  grid_like.msh  grid_like_mesh.py  mesh.py  positive_default.msh  structured_cube.msh  untitled.geo  untitled.msh  very_fine_grid.msh  wavy3d.py
finite-elements-from-scratch-in-python/inputs/tabulated_nodes/: tetrahedron_nodes.npz  warp_tetrahedron_nodes.npz
finite-elements-from-scratch-in-python/meshes/: 3d-mesh.py  3d-torus.msh  3d-torus.py  mesh.py  process-mesh.py  simple.msh  solid-torus.msh
finite-elements-from-scratch-in-python/plotting/: default.msh  example-grid.py  mesh-with-matplotlib.py  plot-adjacent-cells.py  plot-nodal-set-on-mesh.py
finite-elements-from-scratch-in-python/recursivenodes/: __init__.py  lebesgue.py  nodes.py
finite-elements-from-scratch-in-python/tests/: conftest.py  test_1polynomials.py  test_2quadrature.py  test_3lebesgue.py  test_4argparse.py  test_5metrics.py  test_mesh.py  utils.py
finite-elements-from-scratch-in-python/wave_simulator/: finite_elements.py  input_parser.py  mesh.py  physics.py  reference_element_operators.py  setup.py  simulator.py  time_steppers.py  user_interface.py  visualizer.py  visualizing.py
markov-chain-monte-carlo/: README.org  main.py
(+7 files in other folders)
